# proyecto-python

./: README.md
admin/: app.py  pyproject.toml
admin/src/core/: config.py
admin/src/web/: __init__.py
admin/src/web/templates/: error.html  home.html  layout.html
admin/src/web/templates/auth/: login.html
backend_nexo/: app.py  pyproject.toml
backend_nexo/admin/src/core/: config.py  database.py
backend_nexo/admin/src/core/models/: usuario_model.py
backend_nexo/admin/src/web/: __init__.py
backend_nexo/admin/src/web/templates/: home.html  layout.html
backend_nexo/admin/src/web/templates/auth/: login.html
