[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Agnelli Nicolas <nico_edlp@hotmail.es>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
